--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-- '4'
+- '5'
 deploy:
   provider: s3
   access_key_id: AKIAJH2D5IPIRHYJT5IA
@@ -13,3 +13,4 @@ deploy:
   on:
     tags: true
     repo: octoblu/device-validation-schema
+  script:
